# qnexus

./: .cz.toml  .env.example  .env.qnx  .envrc  .gitignore  .gitmodules  .pylintrc  .qnx  CHANGELOG.md  DEPENDENCIES.md  README.md  demo.py  devenv.nix  devenv.yaml  pyproject.toml  pytest.ini  qnx.toml  quickstart.md  shell.nix  test.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  contract.yml  integration.yml  pr-title.yml  release.yml
demo/: README.md  demo.py
docs/: README.md  build_docs.sh
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/qnexus_api/: circuits.doctree  devices.doctree  jobs.doctree  pagination_iterator.doctree  projects.doctree  quotas.doctree  references.doctree  teams.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: conf.py  index.rst
docs/source/_static/: nav-config.js
docs/source/qnexus_api/: assignment.rst  auth.rst  circuit.rst  circuits.rst  compile.rst  context.rst  database_iterator.rst  device.rst  exceptions.rst  execute.rst  job.rst  jobs.rst  project.rst  quota.rst  quotas.rst  references.rst  team.rst  user.rst
example_notebooks/: Automatic Qubit Reuse Compilation.ipynb  Qnexus Demo Ghz Example.ipynb  VQE QNexus Demo.ipynb  assignments_and_quotas.ipynb  context_management.ipynb  demo_notebook.ipynb  jobs_and_results.ipynb  renaming_notes.ipynb  resource_presentation.ipynb  resume_workflow.ipynb  symbolic_circuit.ipynb  test_bits.ipynb  vqe_qnexus.ipynb
examples/: auth_quotas.ipynb  backend_configuration.ipynb  context_management.ipynb  demo.py  devices_credentials.ipynb  getting_started.ipynb  jobs_and_results.ipynb  jobs_results.ipynb  projects_properties_context.ipynb  qnx.conf  quantinuum_examples.ipynb  refs_nexus_iterator.ipynb  resource_presentation.ipynb  saving_refs.ipynb  teams_roles.ipynb  vqe_example.ipynb  vqe_qnexus.ipynb  wasm_examples.ipynb
examples/basics/: auth_quotas.ipynb  backend_configuration.ipynb  braket_examples.ipynb  devices_credentials.ipynb  getting_started.ipynb  ibmq_examples.ipynb  jobs_results.ipynb  projects_properties_context.ipynb  qir.ipynb  qir_examples.ipynb  quantinuum_examples.ipynb  refs_nexus_iterator.ipynb  saving_refs.ipynb  teams_roles.ipynb  wasm_examples.ipynb
examples/basics/data/: gpu_decoder_config.yaml
examples/knowledge_articles/: labelling_workflow_data_with_properties.ipynb  vqe_example.ipynb
integration/: README.md  conftest.py  constants.py  setup_tokens.py  test_assignments.py  test_auth_flows.py  test_backend_configs.py  test_circuits.py  test_credentials.py  test_devices.py  test_gpu_decoder_config.py  test_hugr.py  test_jobs.py  test_projects.py  test_properties.py  test_qir.py  test_qsys_jobs.py  test_quotas.py  test_ref_serialisation.py  test_scope.py  test_teams.py  test_user.py  test_wasm_modules.py
integration/data/: RandomWalkPhaseEstimation.ll  hugr_example.hugr  hugr_example.json
qnexus/: __init__.py  annotations.py  config.py  constants.py  consts.py  context.py  errors.py  exceptions.py  filesystem.py  qnx.default.conf  references.py
qnexus/cli/: __init__.py  auth.py  circuits.py  jobs.py  projects.py  utils.py
qnexus/client/: __init__.py  assignment.py  assignments.py  auth.py  backend_snapshot.py  backend_snapshots.py  circuit.py  circuits.py  client.py  compilations.py  compile_jobs.py  credential.py  credentials.py  database_iterator.py  device.py  devices.py  gpu_decoder_configs.py  health.py  hugr.py  jobs.py  nexus_iterator.py  pagination_iterator.py  project.py  projects.py  qir.py  quota.py  quotas.py  result.py  results.py  role.py  roles.py  status.py  team.py  teams.py  user.py  users.py  utils.py  wasm_modules.py
qnexus/client/job/: __init__.py  _compile.py  _execute.py  compile.py  execute.py
qnexus/client/jobs/: __init__.py  _compile.py  _execute.py  compile.py  execute.py
qnexus/client/models/: __init__.py  aer_noise.py  annotations.py  backend_config.py  backend_info.py  filters.py  job_status.py  responses.py  utils.py
qnexus/models/: __init__.py  aer_noise.py  annotations.py  backend_config.py  filters.py  h_series_noise.py  hypertket_config.py  job_status.py  language.py  meta.py  references.py  scope.py  utils.py
qnexus/models/references/: __init__.py  base.py  projects.py
scripts/: ci_checks.sh  fmt.sh  run_unit_tests.sh  write_dependencies.py
templates/: CHANGELOG.md.j2
tests/: test_auth.py  test_circuits.py  test_context.py  test_filters.py  test_hugr.py  test_references.py  test_utils.py  test_warnings.py
tests/contract/: conftest.py
tests/contract/projects/: test_list_projects_consumer.py
tests/data/: base.ll  example.hugr
(+17 files in other folders)
