[tool.poetry]
name = "qnexus"
version = "0.9.1"
description = "Quantinuum Nexus python client."
authors = ["Vanya Eccles <vanya.eccles@quantinuum.com>", "Aidan Keay <aidan.keay@quantinuum.com>", "John Children <john.children@quantinuum.com>"]
license = "Apache-2.0"
documentation = "https://nexus.quantinuum.com/docs"
readme = "quickstart.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "^2.4"
colorama = "^0.4"
click = "^8.1"
httpx = "^0"
pandas = "^2"
nest-asyncio = "^1.6"
rich = "^13.6"
pytket = "^1.34"
pytket-qiskit = {version = ">=0.50", optional = true}
websockets = ">11,<14"
pydantic-settings = "^2"
quantinuum-schemas = "^1.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-randomly = "^3.15.0"
respx = "^0.20.2"
black = "^23.11.0"
mypy = "^1.10.0"
pylint = "^3.1.0"
pandas-stubs = "^2.2.1.240316"
types-colorama = "^0.4.15.20240311"
pytest-cov = "^5.0.0"
pytest-html = "^4.1.1"
pytest-icdiff = "^0.9"
pytest-timeout = "^2.3.1"
pytest-rerunfailures = "^14.0"
twine = "^5.1.1"


[tool.poetry.extras]
qiskit = ["pytket-qiskit"]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.poetry.scripts]
qnx = "qnexus.cli:entrypoint"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
