[project]
name = "qnexus"
version = "0.18.2"
description = "Quantinuum Nexus python client."
authors = [
    {name = "Vanya Eccles", email = "vanya.eccles@quantinuum.com"},
    {name = "Aidan Keay", email = "aidan.keay@quantinuum.com"},
    {name = "John Children", email = "john.children@quantinuum.com"},
]
license = { file = "LICENSE" }
requires-python = ">=3.10, <4"
readme = "quickstart.md"
dependencies = [
    "pydantic >=2.4, <3.0",
    "colorama >=0.4, <1.0",
    "click >=8.1, <9.0",
    "httpx >=0, <1",
    "pandas >=2, <3",
    "nest-asyncio >=1.6, <2.0",
    "rich >=13.6, <14.0",
    "pytket >=2.3.1, <3.0",
    "websockets >11, <14",
    "pydantic-settings >=2, <3.0",
    "quantinuum-schemas >=3, <4.0",
    "hugr >=0.11.5, <1.0.0",
]

[project.optional-dependencies]
qiskit = [
    "pytket-qiskit >=0.50",
]

[dependency-groups]
dev = [
    "ruff >0.11",
    "jupyter <2.0.0,>=1.0.0",
    "pytest <8.0.0,>=7.4.3",
    "pytest-randomly <4.0.0,>=3.15.0",
    "respx <1.0,>=0.22",
    "mypy <2.0.0,>=1.10.0",
    "pandas-stubs <3.0.0.0,>=2.2.1.240316",
    "types-colorama <1.0.0.0,>=0.4.15.20240311",
    "pytest-cov <6.0.0,>=5.0.0",
    "pytest-html <5.0.0,>=4.1.1",
    "pytest-icdiff <1.0,>=0.9",
    "pytest-timeout <3.0.0,>=2.3.1",
    "pytest-rerunfailures <15.0,>=14.0",
    "twine <6.0.0,>=5.1.1",
    "ipykernel>=6.29.5",
    "pytest-xdist>=3.6.1",
    "guppylang >=0.18.1, <1.0.0",
]


[project.urls]
homepage = "https://github.com/CQCL/qnexus"
repository = "https://github.com/CQCL/qnexus"
documentation = "https://nexus.quantinuum.com/docs"

[project.scripts]
qnx = "qnexus.cli:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
allow_redefinition = true
